fix wordwrap css

--- a/src/styles/editor-style.css
+++ b/src/styles/editor-style.css
@@ -158,6 +158,9 @@ textarea {
 }
 .button-row > * {
     flex: 1;
+}
+
+button {
     white-space: nowrap;
 }
 
